# automated-discovery-research-implementation-pipeline

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md
.cacd/: config.yaml  repo-context.md  secrets-allowlist
.cicd/: config.yaml  repo-context.md  secrets-allowlist
.claude/: settings.json
.claude/hooks/: branch-guard.sh
.cursor/plans/: adr-finalization.plan.md  infra-bootstrap.plan.md  ops-evaluation.plan.md  pipeline-codegen.plan.md  pipeline-evidence.plan.md  pipeline-implementation.plan.md  pipeline-ingestion.plan.md  pipeline-learning.plan.md  pipeline-triage.plan.md  plan-graph.yaml  registry.yaml  tldr-research-ops.plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cacd-cleanup.yml  cacd.yml  cicd-cleanup.yml  cicd.yml  tldr-reader-daily.yml
cacd/: README.md  install.sh
cacd/lib/: branch-cleanup.sh  common.sh  new-repo.sh  report.sh  revert.sh  run.sh
cacd/templates/: config.yaml  repo-context.md
cacd/tests/: run-tests.sh
cicd/: README.md  install.sh
cicd/lib/: branch-cleanup.sh  common.sh  install-agent.sh  new-repo.sh  report.sh  revert.sh  run.sh  setup-cursor.sh
cicd/prompts/: docs-accuracy.md  improvement.md  quality.md
cicd/templates/new-repo/python/: pyproject.toml
cicd/templates/new-repo/python/.cicd/: config.yaml
cicd/templates/new-repo/python/src/{{PACKAGE_NAME}}/: __init__.py
docs/: credential-cleanup-notes.md  git-credentials-inspection-checklist.md  git-credentials-phase4-synthesis.md  git-credentials-windows-setup.md  setup.md
scripts/: run-plans.py  validate-tldr-reader.sh
(+92 files in other folders)
