[project]
name = "{{REPO_NAME}}"
version = "0.0.1"
description = "Scaffolded by CICD."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
